# django-rest-framework-keycloak-auth

./: .gitignore  README.md  pyproject.toml
django_rest_framework_keycloak_auth/: apps.py  authentication.py  models.py  permissions.py
